--- a/index.html
+++ b/index.html
@@ -3,23 +3,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gallery - Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ewan James Knight</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Gallery</h1>
+        <h1>Ewan James Knight</h1>
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="#about">About</a>
+            <a href="#music">Music</a>
+            <a href="#performances">Performances</a>
+            <a href="gallery/index.html">Gallery</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
-    <section>
-        <div class="gallery">
-            <img src="live_set.jpg" alt="Ewan live DJ set">
-            <img src="things_fall_between_poster.png" alt="Things Fall Between poster">
-            <img src="performance_collab.jpg" alt="Collaborative performance with laptop and controller">
-        </div>
+
+    <section id="hero">
+        <img src="gallery/performance_collab.jpg" alt="Ewan and collaborator at a live performance">
     </section>
+
+    <section id="about">
+        <h2>About</h2>
+        <p>
+            <strong>Ewan Knight</strong> is a musician, producer, and educator based in Sheffield, specialising in immersive sound design and richly textured composition.
+            His recent work includes scoring the independent game <em>I Dancem Refusant</em> (2024) and its forthcoming sequel, set for release in 2025. 
+            He also contributed as a songwriter, producer, and instrumentalist on SIM’s <em>After a Bite</em> (2025).
+        </p>
+        <p>
+            Under his solo electronic alias <strong>brainjjus</strong>, Ewan explores atmospheric soundscapes and bio-music techniques, blending organic and digital elements 
+            to create emotionally resonant works. His debut immersive piece, <em>Things Fall Between</em>, premieres on <strong>June 29th, 2025</strong>, with a digital release to follow later in the year.
+        </p>
+        <p>
+            Alongside his creative output, Ewan works as a <strong>session musician</strong> and offers <strong>music tuition</strong> in guitar, piano, and music theory.
+        </p>
+    </section>
+
+    <section id="music">
+        <h2>Music</h2>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus&color=%23121212&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+        </iframe>
+    </section>
+
+    <section id="performances">
+        <h2>Upcoming Performances</h2>
+        <ul>
+            <li><strong>29/06/2025</strong> – Shakespeare's, Kelham Island, Sheffield – <em>Things Fall Between</em> (Free Entry)</li>
+            <li><strong>02/07/2025</strong> – Riverside Studios, London – <em>Odyssey of Oddities</em> (£10)</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:ewan0knight@gmail.com">ewan0knight@gmail.com</a></p>
+        <p>Instagram: <a href="https://instagram.com/ewanjamesknight">@ewanjamesknight</a></p>
+    </section>
+
     <footer>
         <p>© 2025 Ewan James Knight</p>
     </footer>
