--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,9 +15,9 @@
     </header>
     <section>
         <div class="gallery">
-            <img src="live_set.jpg" alt="Ewan live DJ set">
-            <img src="things_fall_between_poster.png" alt="Things Fall Between poster">
-            <img src="performance_collab.jpg" alt="Collaborative performance with laptop and controller">
+            <div class="gallery-item"><img src="live_set.jpg" alt="Ewan live DJ set"></div>
+            <div class="gallery-item"><img src="things_fall_between_poster.png" alt="Things Fall Between poster"></div>
+            <div class="gallery-item"><img src="performance_collab.jpg" alt="Collaborative performance with laptop and controller"></div>
         </div>
     </section>
     <footer>
