--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:ewan0knight@live.co.uk">ewan0knight@gmail.com</a></p>
+        <p>Email: <a href="mailto:ewan0knight@live.co.uk">ewan0knight@live.co.uk</a></p>
         <p>Instagram: <a href="https://instagram.com/ewanjamesknight">@ewanjamesknight</a></p>
     </section>
 
