--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="#about">About</a>
             <a href="#music">Music</a>
-            <a href="#performances">Performances</a>
+            <a href="live/index.html">Live</a>
             <a href="gallery/index.html">Gallery</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -26,16 +26,11 @@
     <section id="about">
         <h2>About</h2>
         <p>
-            <strong>Ewan Knight</strong> is a musician, producer, and educator based in Sheffield, specialising in immersive sound design and richly textured composition.
-            His recent work includes scoring the independent game <em>I Dancem Refusant</em> (2024) and its forthcoming sequel, set for release in 2025. 
-            He also contributed as a songwriter, producer, and instrumentalist on SIM’s <em>After a Bite</em> (2025).
-        </p>
-        <p>
-            Under his solo electronic alias <strong>brainjjus</strong>, Ewan explores atmospheric soundscapes and bio-music techniques, blending organic and digital elements 
-            to create emotionally resonant works. His debut immersive piece, <em>Things Fall Between</em>, premieres on <strong>June 29th, 2025</strong>, with a digital release to follow later in the year.
-        </p>
-        <p>
-            Alongside his creative output, Ewan works as a <strong>session musician</strong> and offers <strong>music tuition</strong> in guitar, piano, and music theory.
+            <strong>Ewan Knight</strong> is a Sheffield-based musician, producer, and educator specialising in immersive sound design. 
+            He has composed soundtracks for independent games and performs under the solo alias <strong>brainjjus</strong>, blending bio-music techniques 
+            and digital processing to craft atmospheric compositions. His debut immersive piece, <em>Things Fall Between</em>, premiered in June 2025 and 
+            will be released as a full-length album later this year. His debut EP, <em>you might never be in the same room you are listening to this again</em>, 
+            is also set for release in late 2025. In addition to his solo work, Ewan is active as a session musician and offers lessons in guitar, piano, and music theory.
         </p>
     </section>
 
@@ -44,14 +39,6 @@
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
             src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus&color=%23121212&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
         </iframe>
-    </section>
-
-    <section id="performances">
-        <h2>Upcoming Performances</h2>
-        <ul>
-            <li><strong>29/06/2025</strong> – Shakespeare's, Kelham Island, Sheffield – <em>Things Fall Between</em> (Free Entry)</li>
-            <li><strong>02/07/2025</strong> – Riverside Studios, London – <em>Odyssey of Oddities</em> (£10)</li>
-        </ul>
     </section>
 
     <section id="contact">
