--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
         <img src="gallery/performance_collab.jpg" alt="Ewan and collaborator at a live performance">
     </section>
 
-    <section id="about">
-        <h2>About</h2>
-        <p>
-            <strong>Ewan Knight</strong> is a Sheffield-based musician, producer, and educator specialising in immersive sound design. 
-            He has composed soundtracks for independent games and performs under the solo alias <strong>brainjjus</strong>, blending bio-music techniques 
-            and digital processing to craft atmospheric compositions. His debut immersive piece, <em>Things Fall Between</em>, premiered in June 2025 and 
-            will be released as a full-length album later this year. His debut EP, <em>you might never be in the same room you are listening to this again</em>, 
-            is also set for release in late 2025. In addition to his solo work, Ewan is active as a session musician and offers lessons in guitar, piano, and music theory.
-        </p>
-    </section>
+    
+<section id="about">
+    <h2>About</h2>
+    <p>
+        <strong>Ewan Knight</strong> is a musician, producer, and educator based in Sheffield, specialising in immersive sound design and 
+        richly textured composition. His work includes soundtracks for independent games and collaborations across a range of genres. 
+        As <strong>brainjjus</strong>, his solo electronic project, he blends bio-music techniques, multiple instruments, and digital tools 
+        to craft atmospheric and emotionally resonant soundscapes. His debut immersive piece, <em>Things Fall Between</em>, premiered in June 2025 
+        and will be released as a full-length album later this year. His debut EP, <em>you might never be in the same room you are listening to this again</em>, 
+        is also due for release in late 2025.
+    </p>
+</section>
+
 
     <section id="music">
         <h2>Music</h2>
@@ -44,7 +47,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:ewan0knight@live.co.uk">ewan0knight@live.co.uk</a></p>
-        <p>Instagram: <a href="https://instagram.com/ewanjamesknight">@ewanjamesknight</a></p>
+        <p>Instagram: <a href="https://instagram.com/brainjjus">@brainjjus</a></p>
     </section>
 
     <footer>
