--- a/index.html
+++ b/index.html
@@ -23,19 +23,27 @@
         <img src="gallery/performance_collab.jpg" alt="Ewan and collaborator at a live performance">
     </section>
 
-    
-<section id="about">
-    <h2>About</h2>
-    <p>
-        <strong>Ewan Knight</strong> is a musician, producer, and educator based in Sheffield, specialising in immersive sound design and 
-        richly textured composition. His work includes soundtracks for independent games and collaborations across a range of genres. 
-        As <strong>brainjjus</strong>, his solo electronic project, he blends bio-music techniques, multiple instruments, and digital tools 
-        to craft atmospheric and emotionally resonant soundscapes. His debut immersive piece, <em>Things Fall Between</em>, premiered in June 2025 
-        and will be released as a full-length album later this year. His debut EP, <em>you might never be in the same room you are listening to this again</em>, 
-        is also due for release in late 2025.
-    </p>
-</section>
-
+    <section id="about">
+        <h2>About</h2>
+        <p>
+            <strong>Ewan Knight</strong> is a musician, producer, and educator based in Sheffield, specialising in immersive sound design and richly textured composition. 
+            His recent work includes composing original soundtracks for independent games and launching his solo electronic project <strong>brainjjus</strong>, 
+            which blends bio-music techniques, acoustic instrumentation, and digital processing to craft atmospheric and emotionally resonant soundscapes.
+        </p>
+        <p>
+            His debut immersive piece, <em>Things Fall Between</em>, premiered in June 2025 and will be released as a full-length album later this year. 
+            He is also preparing the release of his debut EP, <em>you might never be in the same room you are listening to this again</em>, set for release in late 2025.
+        </p>
+        <p>
+            Ewan is one half of the collaborative duo <strong>individual Hotpot</strong> with Nam Joo Hoo. Their experimental performance piece, <em>Gut Feelings</em>, explores themes 
+            of bodily tension, sonic discomfort, and involuntary expression through improvisation, ambient electronics, and manipulated vocal textures. 
+            The duo has presented the work in both academic and performance contexts.
+        </p>
+        <p>
+            In addition to his creative work, Ewan is available as a <strong>session musician</strong> and offers <strong>music tuition</strong> in guitar, piano, and music theory 
+            to learners of all ages and levels.
+        </p>
+    </section>
 
     <section id="music">
         <h2>Music</h2>
