--- a/live/index.html
+++ b/live/index.html
@@ -16,15 +16,17 @@
     <section>
         <h2>Upcoming Performances</h2>
         <ul>
-            <li><strong>02/08/2025</strong> – Eastside Projects, Birmingham</li>
+            <li><strong>02 August 2025</strong> – Eastside Projects, Birmingham</li>
             <li><strong>August 2025</strong> – Liverpool Independent Biennial</li>
+            <li><strong>September 2025</strong> – Lambeth Fringe, London</li>
+            <li><strong>November 2025</strong> – Gothenburg, Sweden</li>
         </ul>
     </section>
     <section>
         <h2>Past Performances</h2>
         <ul>
-            <li><strong>29/06/2025</strong> – Shakespeare's, Kelham Island, Sheffield – <em>Things Fall Between</em> (Free Entry)</li>
-            <li><strong>02/07/2025</strong> – Riverside Studios, London – <em>Odyssey of Oddities</em> (£10)</li>
+            <li><strong>29 June 2025</strong> – Shakespeare’s, Kelham Island, Sheffield – <em>Things Fall Between</em></li>
+            <li><strong>02 July 2025</strong> – Riverside Studios, London – <em>Odyssey of Oddities</em></li>
         </ul>
     </section>
     <footer>
