--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             He is also preparing the release of his debut EP, <em>you might never be in the same room you are listening to this again</em>, set for release in late 2025.
         </p>
         <p>
-            Ewan is one half of the collaborative duo <strong>individual Hotpot</strong> with Nam Joo Hoo. Their experimental performance piece, <em>Gut Feelings</em>, explores themes 
+            Ewan is one half of the collaborative duo <strong>individual Hotpot</strong> with Nam Joo Huh. Their experimental performance piece, <em>Gut Feelings</em>, explores themes 
             of bodily tension, sonic discomfort, and involuntary expression through improvisation, ambient electronics, and manipulated vocal textures. 
             The duo has presented the work in both academic and performance contexts.
         </p>
