--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             margin: 0;
-            font-family: sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             color: white;
             background: url('assets/images/homepage.jpg') no-repeat center center fixed;
             background-size: cover;
@@ -40,6 +40,20 @@
             width: 100%;
             text-align: center;
         }
+        .social-buttons {
+            position: absolute;
+            bottom: 120px;
+            width: 100%;
+            text-align: center;
+        }
+        .social-buttons a {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background: rgba(255,255,255,0.8);
+            color: black;
+            text-decoration: none;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -51,8 +65,15 @@
             <a href="works/things-fall-between.html">Works</a>
             <a href="session.html">Session Work</a>
             <a href="tuition.html">Tuition</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
+
+    <div class="social-buttons">
+        <a href="https://soundcloud.com/brainjjus" target="_blank">SoundCloud</a>
+        <a href="https://instagram.com/brainjjus" target="_blank">Instagram</a>
+    </div>
+
     <section>
         <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/walking-through-a-forest-in-the-alps-and-sitting-by-a-mountain-stream&color=%23ffffff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
