--- a/cv.html
+++ b/cv.html
@@ -111,5 +111,11 @@
         </li>
     </ul>
 
+
+    <h2>Awards</h2>
+    <ul>
+        <li>Recipient of Earthsonic Foundation Futures Award</li>
+    </ul>
+
 </body>
 </html>
