--- a/index.html
+++ b/index.html
@@ -3,81 +3,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ewan James Knight</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home – Ewan James Knight</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Times New Roman', Times, serif;
-            color: white;
-            background: url('assets/images/homepage.jpg') no-repeat center center fixed;
-            background-size: cover;
-        }
-        header {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 40px;
-            background: rgba(0, 0, 0, 0.4);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 1.8em;
-        }
-        nav a {
-            margin-left: 20px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-        section {
-            position: absolute;
-            bottom: 40px;
-            width: 100%;
-            text-align: center;
-        }
-        .social-buttons {
-            position: absolute;
-            bottom: 120px;
-            width: 100%;
-            text-align: center;
-        }
-        .social-buttons a {
-            margin: 0 10px;
-            padding: 10px 20px;
-            background: rgba(255,255,255,0.8);
-            color: black;
-            text-decoration: none;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <h1>Ewan James Knight</h1>
-        <nav>
-            <a href="bio.html">Bio</a>
-            <a href="cv.html">CV</a>
-            <a href="works/things-fall-between.html">Works</a>
-            <a href="session.html">Session Work</a>
-            <a href="tuition.html">Tuition</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
 
-    <div class="social-buttons">
-        <a href="https://soundcloud.com/brainjjus" target="_blank">SoundCloud</a>
-        <a href="https://instagram.com/brainjjus" target="_blank">Instagram</a>
-    </div>
+<div class="sidebar">
+    <h2><a href="/index.html">Ewan James Knight</a></h2>
+    <ul>
+        <li><a href="/bio.html">Bio</a></li>
+        <li><a href="/cv.html">CV</a></li>
+        <li><a href="/works/index.html">Works</a></li>
+        <li><a href="/session.html">Session Work</a></li>
+        <li><a href="/tuition.html">Tuition</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+    </ul>
+</div>
 
-    <section>
-        <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/walking-through-a-forest-in-the-alps-and-sitting-by-a-mountain-stream&color=%23ffffff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
-        </iframe>
-    </section>
+<div class="main-content">
+    <h1>Welcome</h1>
+    <p>This is the placeholder homepage with sidebar navigation.</p>
+</div>
 </body>
 </html>
