--- a/index.html
+++ b/index.html
@@ -3,26 +3,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home – Ewan James Knight</title>
+    <title>Ewan James Knight</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: 'Times New Roman', Times, serif;
+            background: url('RNI-Films-IMG-58260E6B-830F-4258-90EB-430633AC3E88.JPG') no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+        }
+        .nav {
+            margin-top: 20px;
+        }
+        .nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.2em;
+        }
+        .nav a:hover {
+            text-decoration: underline;
+        }
+        .soundcloud-player {
+            margin: 30px 0;
+        }
+        .socials {
+            margin-top: 20px;
+        }
+        .socials a {
+            margin: 0 10px;
+            display: inline-block;
+        }
+        .socials img {
+            width: 32px;
+            height: 32px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Ewan James Knight</h1>
 
-<div class="sidebar">
-    <h2><a href="/index.html">Ewan James Knight</a></h2>
-    <ul>
-        <li><a href="/bio.html">Bio</a></li>
-        <li><a href="/cv.html">CV</a></li>
-        <li><a href="/works/index.html">Works</a></li>
-        <li><a href="/session.html">Session Work</a></li>
-        <li><a href="/tuition.html">Tuition</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-    </ul>
-</div>
+    <div class="nav">
+        <a href="bio.html">Bio</a>
+        <a href="cv.html">CV</a>
+        <a href="works/index.html">Works</a>
+        <a href="session.html">Session Work</a>
+        <a href="tuition.html">Tuition</a>
+        <a href="contact.html">Contact</a>
+    </div>
 
-<div class="main-content">
-    <h1>Welcome</h1>
-    <p>This is the placeholder homepage with sidebar navigation.</p>
-</div>
+    <div class="soundcloud-player">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/walking-through-a-forest-in-the-alps-and-sitting-by-a-mountain-stream&color=%23ffffff&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+        </iframe>
+    </div>
+
+    <div class="socials">
+        <a href="https://soundcloud.com/brainjjus" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Soundcloud_icon.svg" alt="SoundCloud">
+        </a>
+        <a href="https://instagram.com/brainjjus" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+        </a>
+    </div>
 </body>
 </html>
