--- a/cv.html
+++ b/cv.html
@@ -1,121 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>CV – Ewan James Knight</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        h2 {
-            font-size: 1.4em;
-            margin-top: 2em;
-        }
-        ul {
-            line-height: 1.6em;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>CV – Ewan James Knight</h1>
-
-    <h2>Performances</h2>
-    <ul>
-        <li><strong>2025</strong>
-            <ul>
-                <li>BIRCH Studios and Gallery – Sheffield (Gut Feelings with Nam Joo Huh)</li>
-                <li>Eastside Projects – Birmingham (Gut Feelings with Nam Joo Huh)</li>
-                <li>Riverside Studios – London (Gut Feelings with Nam Joo Huh)</li>
-                <li>Shakespeare's – Sheffield (Things Fall Between – Solo Show)</li>
-                <li>Hagglers Corner – Sheffield (EMOM Solo Performance)</li>
-                <li>Yellow Arch Studios – Sheffield (With Steel City Groovers, followed by Solo DJ Show)</li>
-                <li>Sidney & Matilda – Sheffield (with Mat Hook)</li>
-                <li>Hangar 94 – Sheffield (with Mat Hook)</li>
-                <li>Cutlers Hall – Sheffield (with Steel City Groovers)</li>
-            </ul>
-        </li>
-        <li><strong>2024</strong>
-            <ul>
-                <li>Herdfest – Sheffield (with Selina Lee)</li>
-                <li>Nottingham House – Sheffield (with Selina Lee)</li>
-                <li>Dore & Totley Festival – Sheffield (with Mat Hook)</li>
-                <li>Hangar 94 – Sheffield (with Mat Hook)</li>
-                <li>Bamfest – Barnsley (with Selina Lee)</li>
-                <li>Tramlines – Sheffield (with Selina Lee)</li>
-                <li>Pitcher and Piano – Sheffield (with Steel City Groovers)</li>
-                <li>Sheffield City Hall – Sheffield (with Steel City Groovers)</li>
-                <li>Cutlers Hall – Sheffield (with Steel City Groovers)</li>
-            </ul>
-        </li>
-    </ul>
-
-    <h2>Projects</h2>
-    <ul>
-        <li><strong>2025</strong>
-            <ul>
-                <li><em>Things Fall Between</em> – Solo production</li>
-                <li><em>Gut Feelings</em> – In collaboration with Nam Joo Huh as Individual Hotpot</li>
-                <li><em>you might never be in the place you are listening to this again</em> – Solo EP</li>
-                <li><em>After a Bite</em> – In collaboration with SIM</li>
-            </ul>
-        </li>
-        <li><strong>2024</strong>
-            <ul>
-                <li><em>I Dancem Refusant</em> – Video game sound design for Jack Readman</li>
-            </ul>
-        </li>
-        <li><strong>2021</strong>
-            <ul>
-                <li><em>Antifolk Hero</em> – <em>Colours</em>, <em>Drowning Stamp</em> and <em>Late Escapes</em> (co-writing and guitar)</li>
-            </ul>
-        </li>
-    </ul>
-
-
-    <h2>Exhibitions</h2>
-    <ul>
-        <li><strong>2025</strong>
-            <ul>
-                <li><em>Gut Feelings</em> – BIRCH Studios and Gallery, Sheffield, with Nam Joo Huh, Ryu Kim, and Lara Jennings. Part of the Liverpool Independents Biennial.</li>
-            </ul>
-        </li>
-    </ul>
-
-
-    <h2>Collaborations</h2>
-    <ul>
-        <li><strong>2025–Present</strong>
-            <ul>
-                <li><em>Individual Hotpot</em> – with Nam Joo Huh</li>
-            </ul>
-        </li>
-        <li><strong>2022–Present</strong>
-            <ul>
-                <li><em>Selina Lee</em> – Backing band performances</li>
-                <li><em>Mat Hook</em> – Backing band performances</li>
-                <li><em>Steel City Groovers</em> – Backing band performances</li>
-            </ul>
-        </li>
-        <li><strong>2018–2022</strong>
-            <ul>
-                <li><em>Antifolk Hero</em> – with Nathaniel Smith, James Ridgeway, and Dan Oram. Performances included The Leadmill, Sidney & Matilda, and The Washington.</li>
-            </ul>
-        </li>
-    </ul>
-
-
-    <h2>Awards</h2>
-    <ul>
-        <li>Recipient of Earthsonic Foundation Futures Award</li>
-    </ul>
-
+    <p>This is a placeholder for the cv – ewan james knight page.</p>
 </body>
 </html>
