--- a/session.html
+++ b/session.html
@@ -1,35 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Session Work – Ewan James Knight</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6em;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Session Work & Backing Tracks</h1>
-    <p>I am an experienced multi-instrumentalist, available for session work both live and in the studio. I specialise in electric, acoustic, and classical guitar, but also regularly perform on bass and keys.</p>
-    <p>Comfortable across a wide range of genres — including rock, jazz, blues, pop, funk, soul, and classical guitar — I can adapt quickly to different styles and projects. Whether you need tasteful guitar parts, deep grooves, or lush harmonic textures, I’m happy to contribute creatively and professionally.</p>
-    <p>In addition to instrumental sessions, I also offer:</p>
-    <ul>
-        <li>🎛️ Mixing and mastering assistance</li>
-        <li>🎹 Custom backing tracks for solo performers and vocalists</li>
-    </ul>
-    <p>Rates vary depending on the project — please <a href="contact.html">get in touch</a> to discuss your needs. I’ve provided work for a range of artists and would love to hear about your next idea.</p>
+    <h1>Session Work – Ewan James Knight</h1>
+    <p>This is a placeholder for the session work – ewan james knight page.</p>
 </body>
 </html>
