--- a/tuition.html
+++ b/tuition.html
@@ -1,42 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Tuition – Ewan James Knight</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6em;
-        }
-        a {
-            color: #000;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Music Tuition</h1>
-    <p>I offer one-to-one and small group lessons in a range of instruments and music subjects, tailored to all ages and experience levels. With over five years of teaching experience, I currently work with Sheffield Music Hub, Seven Hills Tuition, and Sheffield Inclusion Centre.</p>
-    <p>Lessons are available in:</p>
-    <ul>
-        <li>🎸 Classical, acoustic, and electric guitar (up to Grade 8 and beyond)</li>
-        <li>🎹 Piano and keyboard</li>
-        <li>🎵 Bass guitar, ukulele, and banjo</li>
-        <li>🎧 Music theory and music production (Ableton Live, Pro Tools, etc.)</li>
-    </ul>
-    <p>My teaching approach is flexible and student-centred — whether you're preparing for grades, developing original compositions, or simply learning for fun, I aim to make lessons engaging, supportive, and musically rich.</p>
-    <p>📍 Based in Sheffield.</p>
-    <p>🔗 <a href="https://musicteacher.com/profile/ewanjk/" target="_blank">View my teaching profile on MusicTeacher.com</a></p>
-    <p>If you're interested in lessons or want to discuss a tailored plan, feel free to <a href="contact.html">get in touch</a>.</p>
+    <h1>Tuition – Ewan James Knight</h1>
+    <p>This is a placeholder for the tuition – ewan james knight page.</p>
 </body>
 </html>
