--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Contact – Ewan James Knight</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6em;
-        }
-        a {
-            color: #000;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Contact</h1>
-    <p>For bookings, collaborations, or general enquiries, feel free to reach out via email or Instagram:</p>
-    <p>Email: <a href="mailto:ewan0knight@gmail.com">ewan0knight@gmail.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/brainjjus" target="_blank">@brainjjus</a></p>
+    <h1>Contact – Ewan James Knight</h1>
+    <p>This is a placeholder for the contact – ewan james knight page.</p>
 </body>
 </html>
