--- a/works/soundcloud.html
+++ b/works/soundcloud.html
@@ -1,35 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>SoundCloud – Ewan James Knight</title>
     <link rel="stylesheet" href="../style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-            text-align: center;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        a {
-            font-size: 1.2em;
-            font-weight: bold;
-            text-decoration: none;
-            color: #000;
-        }
-    </style>
 </head>
 <body>
-    <h1>Listen on SoundCloud</h1>
-    <p>
-        <a href="https://soundcloud.com/brainjjus" target="_blank">
-            Open SoundCloud Profile
-        </a>
-    </p>
+    <h1>SoundCloud – Ewan James Knight</h1>
+    <p>This is a placeholder for the soundcloud – ewan james knight page.</p>
 </body>
 </html>
