--- a/works/things-fall-between.html
+++ b/works/things-fall-between.html
@@ -1,55 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Things Fall Between – Ewan James Knight</title>
     <link rel="stylesheet" href="../style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6em;
-        }
-        iframe {
-            margin-top: 20px;
-            width: 100%;
-            max-width: 600px;
-            height: 166px;
-            border: none;
-        }
-        .video-container {
-            margin-top: 20px;
-        }
-        .video-container iframe {
-            width: 100%;
-            max-width: 600px;
-            height: 338px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Things Fall Between</h1>
-    <p><strong>Things Fall Between</strong> is a solo ambient composition in multiple movements, created as the final major project of Ewan James Knight’s MA in Music Performance, Production and Business. The piece explores the psychological experience of falling — not simply the physical descent, but the emotional, sonic, and temporal distortions that come with it.</p>
-
-    <p>Combining synthesizers, guitar, field recordings, and found sounds, the project constructs an immersive, unfolding sound world. The live performance version premiered at Shakespeare's, Sheffield in June 2025 and will be released as an album later in the year.</p>
-
-    <p><strong>Listen:</strong></p>
-    <iframe scrolling="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/sets/things-fall-between-live-performance-version&color=%23111111&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
-    </iframe>
-
-    <div class="video-container">
-        <p><strong>Watch:</strong></p>
-        <iframe src="https://www.youtube.com/embed/2QHkLvJuYXg" title="Things Fall Between Live Performance" allowfullscreen></iframe>
-    </div>
+    <h1>Things Fall Between – Ewan James Knight</h1>
+    <p>This is a placeholder for the things fall between – ewan james knight page.</p>
 </body>
 </html>
