--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Contact – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contact – Ewan James Knight</h1>
-    <p>This is a placeholder for the contact – ewan james knight page.</p>
+    <h1>Contact</h1>
+    <p>Email: <a href="mailto:ewan0knight@gmail.com">ewan0knight@gmail.com</a></p>
+    <p>Instagram: <a href="https://instagram.com/brainjjus" target="_blank">@brainjjus</a></p>
 </body>
 </html>
