--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>CV – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CV – Ewan James Knight</h1>
-    <p>This is a placeholder for the cv – ewan james knight page.</p>
+    <h1>CV</h1>
+    <h2>Performances</h2>
+    <ul>
+        <li>2025 – BIRCH Studios and Gallery, Liverpool (Gut Feelings with Nam Joo Huh)</li>
+        <li>2025 – Eastside Projects, Birmingham (Gut Feelings with Nam Joo Huh)</li>
+        <li>2025 – Riverside Studios, London (Gut Feelings with Nam Joo Huh)</li>
+        <li>2025 – Shakespeare's, Sheffield (Things Fall Between Solo Show)</li>
+        <li>2025 – Hagglers Corner, Sheffield (EMOM Solo Performance)</li>
+        <li>2025 – Yellow Arch Studios, Sheffield (With Steel City Groovers + Solo DJ Set)</li>
+        <li>2025 – Sidney and Matilda, Sheffield (Mat Hook)</li>
+        <li>2025 – Hangar 94, Sheffield (Mat Hook)</li>
+        <li>2025 – Cutlers Hall, Sheffield (Steel City Groovers)</li>
+        <li>2024 – Herdfest, Sheffield (Selina Lee)</li>
+        <li>2024 – Nottingham House, Sheffield (Selina Lee)</li>
+        <li>2024 – Dore and Totley Festival, Sheffield (Mat Hook)</li>
+        <li>2024 – Hangar 94, Sheffield (Matt Hook)</li>
+        <li>2024 – Bamfest, Sheffield (Selina Lee)</li>
+        <li>2024 – Tramlines Festival, Sheffield (Selina Lee)</li>
+        <li>2024 – Pitcher and Piano, Sheffield (Steel City Groovers)</li>
+        <li>2024 – Sheffield City Hall, Sheffield (Steel City Groovers)</li>
+        <li>2024 – Cutlers Hall, Sheffield (Steel City Groovers)</li>
+    </ul>
+
+    <h2>Exhibitions</h2>
+    <ul>
+        <li>2025 – Gut Feelings, BIRCH Studios and Gallery, Liverpool. With Nam Joo Huh, Ryu Kim, and Lara Jennings. Part of the Liverpool Independents Biennial.</li>
+    </ul>
+
+    <h2>Projects</h2>
+    <ul>
+        <li>2025 – Things Fall Between – Solo production</li>
+        <li>2025 – Gut Feelings – Individual Hotpot (with Nam Joo Huh)</li>
+        <li>2025 – you might never be in the same room you are listening to this again – Solo EP</li>
+        <li>2025 – After a Bite – In collaboration with SIM</li>
+        <li>2024 – I Dancem Refusant – Game sound design (Jack Readman)</li>
+        <li>2021 – Antifolk Hero – Colours, Drowning Stamp, and Late Escapes – Co-writing and guitar</li>
+    </ul>
+
+    <h2>Collaborations</h2>
+    <ul>
+        <li>2025–Present – Individual Hotpot (with Nam Joo Huh)</li>
+        <li>2022–Present – Selina Lee (live backing band)</li>
+        <li>2022–Present – Mat Hook (live backing band)</li>
+        <li>2022–Present – Steel City Groovers (live backing band)</li>
+        <li>2018–2022 – Antifolk Hero (with Nathaniel Smith, James Ridgeway, Dan Oram) — venues included Leadmill, Sidney & Matilda, The Washington</li>
+    </ul>
+
+    <h2>Awards</h2>
+    <ul>
+        <li>Recipient – Earthsonic Foundation Futures Award</li>
+    </ul>
 </body>
 </html>
