--- a/session.html
+++ b/session.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Session Work – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Session Work – Ewan James Knight</h1>
-    <p>This is a placeholder for the session work – ewan james knight page.</p>
+    <h1>Session Work</h1>
+    <p>Ewan is an experienced and versatile session musician, comfortable on electric, acoustic, and classical guitar, as well as bass and keys. He works across a wide range of genres including rock, jazz, blues, pop, classical (guitar), funk, and soul. He is also available to support with mixing, mastering, and the creation of professional-quality backing tracks for solo performers.</p>
+    <p>He has worked with artists including Selina Lee, Mat Hook, Steel City Groovers, and Antifolk Hero. Rates vary depending on the scope of the project — please <a href="contact.html">get in touch</a> to discuss ideas and requirements.</p>
 </body>
 </html>
