--- a/tuition.html
+++ b/tuition.html
@@ -1,12 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Tuition – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tuition – Ewan James Knight</h1>
-    <p>This is a placeholder for the tuition – ewan james knight page.</p>
+    <h1>Music Tuition</h1>
+    <p>Ewan is a qualified and dedicated music educator, offering lessons in classical, electric, and acoustic guitar (Grade 8 Classical), as well as bass guitar, keys, ukulele, banjo, music production, and music theory. He works with students of all ages and abilities, focusing on inclusive, supportive, and engaging tuition.</p>
+    <p>He currently teaches through Sheffield Inclusion Centre, Sheffield Music Hub, and Seven Hills Tuition. In-person lessons are available in Sheffield and surrounding areas.</p>
+    <p><a href="https://musicteacher.com/profile/ewanjk/" target="_blank">More details on Ewan’s MusicTeacher.com profile</a>.</p>
 </body>
 </html>
