--- a/works/soundcloud.html
+++ b/works/soundcloud.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SoundCloud – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-    <h1>SoundCloud – Ewan James Knight</h1>
-    <p>This is a placeholder for the soundcloud – ewan james knight page.</p>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://soundcloud.com/brainjjus">
