--- a/works/spotify.html
+++ b/works/spotify.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Spotify – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-    <h1>Spotify – Ewan James Knight</h1>
-    <p>This is a placeholder for the spotify – ewan james knight page.</p>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://open.spotify.com/artist/6gXUsj05uNhFBePL3R5CPS?si=Wmc35N5kR3KME4XwVfCrmw">
