--- a/works/gut-feelings.html
+++ b/works/gut-feelings.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Gut Feelings – Ewan James Knight</h1>
-    <p>This is a placeholder for the gut feelings – ewan james knight page.</p>
+    <h1>Gut Feelings</h1>
+    <p><em>Gut Feelings</em> is a collaborative performance-lecture and sound installation by Ewan James Knight and Nam Joo Huh (as Individual Hotpot). It explores involuntary body sounds, sonic shame, memory, and care through sound, voice, video, sculpture, and text.</p>
+    <p>The performance combines improvised ambient sound design and field recordings (by Ewan) with spoken word and visuals (by Nam), unfolding across a shifting landscape of vulnerability and sonic attention. The piece has been performed across the UK and Europe, and exhibited as an installation at BIRCH Gallery as part of the Liverpool Independents Biennial.</p>
+    <p>Contributors to the exhibition included Nam Joo Huh, Lara Jennings, and Ryu Kim.</p>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/concerto-for-digestive-respitory-and-cardivascular-systems&color=%23ffffff&auto_play=false&show_comments=false">
+    </iframe>
+    <p><a href="https://drive.google.com/file/d/1B8BrNSx86j8V_6VsVm1m8YG1NNt8Xmxi/view?usp=drive_link" target="_blank">Watch video documentation</a></p>
 </body>
 </html>
