--- a/works/things-fall-between.html
+++ b/works/things-fall-between.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,12 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Things Fall Between – Ewan James Knight</h1>
-    <p>This is a placeholder for the things fall between – ewan james knight page.</p>
+    <h1>Things Fall Between</h1>
+    <p><em>Things Fall Between</em> is an immersive, long-form ambient performance by Ewan James Knight, originally developed as his MA final project. The piece is structured in six movements, performed with guitar, effects, synthesizers, and electronics.</p>
+    <p>Premiered in June 2025, the work explores the sensation of falling — as a metaphor for psychological rupture — and uses layered textures, field recordings, and spatial audio to create an enveloping sound world. A studio version is set for release as a full album later in 2025.</p>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/sets/things-fall-between-live-performance-version&color=%23ffffff&auto_play=false&show_comments=false">
+    </iframe>
+    <p><a href="https://youtu.be/2QHkLvJuYXg" target="_blank">Watch the live video performance</a></p>
 </body>
 </html>
